--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "tunnel": "ngrok http 3000"
-
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -22,7 +21,9 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
+    "react-navigation-tabs": "^2.6.0",
+    "react-native-maps": "~0.25.0",
+    "expo-location": "~7.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
